Refactor index.html for weekly update layout
Removed old article section and added new weekly update section with archive link.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,4 @@
-
-                <a href="archive/2025-12-23.html" class="block group">
-                    <article class="glass-card rounded-2xl p-6 md:p-8 flex items-center justify-between">
-                        <div>
-                            <div class="text-xs font-semibold text-accent uppercase tracking-wider mb-2">
-                                2025 · 12-23
-                            </div>
-                            <h3 class="text-xl font-bold text-[#1D1D1F] group-hover:text-black transition-colors">
-                                具身智能技术前沿周刊
-                            </h3>
-                            <p class="text-sm text-[#86868B] mt-2 line-clamp-1">
-                                本期深度解析了 2 个具身智能核心技术视频与行业洞察。
-                            </p>
-                        </div>
-                        <div class="ml-4 text-[#86868B] group-hover:text-accent transition-colors">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <line x1="5" y1="12" x2="19" y2="12"></line>
-                                <polyline points="12 5 19 12 12 19"></polyline>
-                            </svg>
-                        </div>
-                    </article>
-                </a><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -98,3 +77,37 @@
                 具身智能·行业周刊
             </h1>
             <p class="text-lg md:text-xl text-[#86868B] max-w-2xl mx-auto font-medium leading-relaxed">
+                由 AI Agent 自动驱动的深度策展<br class="hidden md:inline">，每周一更新
+            </p>
+        </section>
+
+        <section class="max-w-2xl mx-auto">
+            <h2 class="sr-only">周刊列表</h2>
+            
+            <div class="space-y-4">
+                <a href="/archive/2025-W51.html" class="block group">
+                    <article class="glass-card rounded-2xl p-6 md:p-8 flex items-center justify-between opacity-60">
+                        <div>
+                            <div class="text-xs font-semibold text-[#86868B] uppercase tracking-wider mb-2">
+                                2025 · Archive
+                            </div>
+                            <h3 class="text-xl font-bold text-[#1D1D1F]">
+                                具身智能年度回顾 (示例)
+                            </h3>
+                        </div>
+                        <div class="ml-4 text-[#86868B]">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
+                        </div>
+                    </article>
+                </a>
+            </div>
+            
+            <div class="mt-20 text-center">
+                <p class="text-xs text-[#86868B] tracking-widest uppercase">
+                    © 2025 Embodied AI Weekly · Powered by n8n & Gemini
+                </p>
+            </div>
+        </section>
+    </main>
+</body>
+</html>
