--- a/index.html
+++ b/index.html
@@ -1,25 +1,4 @@
-
-                <a href="archive/2025-12-23.html" class="block group">
-                    <article class="glass-card rounded-2xl p-6 md:p-8 flex items-center justify-between">
-                        <div>
-                            <div class="text-xs font-semibold text-accent uppercase tracking-wider mb-2">
-                                2025 · 12-23
-                            </div>
-                            <h3 class="text-xl font-bold group-hover:text-black transition-colors">
-                                具身智能技术前沿周刊
-                            </h3>
-                            <p class="text-sm text-[#86868B] mt-2 line-clamp-1">
-                                本期深度解析了 2 个具身智能核心技术视频。
-                            </p>
-                        </div>
-                        <div class="ml-4 text-[#86868B] group-hover:text-accent transition-colors">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <line x1="5" y1="12" x2="19" y2="12"></line>
-                                <polyline points="12 5 19 12 12 19"></polyline>
-                            </svg>
-                        </div>
-                    </article>
-                </a><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
@@ -43,39 +22,38 @@
             backdrop-filter: blur(20px);
             -webkit-backdrop-filter: blur(20px);
             border: 1px solid rgba(255, 255, 255, 0.4);
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.01);
             transition: all 0.3s ease;
         }
         .glass-card:hover { transform: translateY(-2px); background: rgba(255, 255, 255, 0.95); }
     </style>
 </head>
-<body class="min-h-screen flex flex-col font-sans text-[#1D1D1F]">
+<body class="text-[#1D1D1F] min-h-screen flex flex-col font-sans">
     <header class="w-full max-w-4xl mx-auto px-6 py-8 flex items-center justify-between">
         <div class="flex items-center gap-3">
-            <div class="w-10 h-10 bg-black rounded-xl flex items-center justify-center text-white">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="w-6 h-6"><rect x="3" y="11" width="18" height="10" rx="2"></rect><circle cx="12" cy="5" r="2"></circle><path d="M12 7v4"></path></svg>
+            <div class="w-10 h-10 bg-black rounded-xl flex items-center justify-center text-white shadow-sm">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6"><rect x="3" y="11" width="18" height="10" rx="2"></rect><circle cx="12" cy="5" r="2"></circle><path d="M12 7v4"></path></svg>
             </div>
-            <span class="font-semibold text-lg uppercase tracking-tight">Embodied AI</span>
+            <span class="font-semibold text-lg tracking-tight tracking-tight">Embodied AI</span>
         </div>
     </header>
 
     <main class="flex-grow w-full max-w-4xl mx-auto px-6 pb-20">
         <section class="mt-16 mb-20 text-center">
             <h1 class="text-4xl md:text-6xl font-bold tracking-tight mb-6">具身智能·行业周刊</h1>
-            <p class="text-lg text-[#86868B]">由 AI Agent 自动驱动的深度策展，每周更新</p>
+            <p class="text-lg text-[#86868B] max-w-2xl mx-auto font-medium leading-relaxed">由 AI Agent 自动驱动的深度策展，每周一更新</p>
         </section>
 
         <section class="max-w-2xl mx-auto">
             <div class="space-y-4">
                 <article class="glass-card rounded-2xl p-6 md:p-8 flex items-center justify-between opacity-50">
                     <div>
-                        <div class="text-xs font-semibold text-[#86868B] uppercase mb-2">System · Waiting</div>
-                        <h3 class="text-xl font-bold">正在等待首期内容生成...</h3>
+                        <div class="text-xs font-semibold text-[#86868B] uppercase mb-2">2025 · Archive</div>
+                        <h3 class="text-xl font-bold">具身智能年度回顾 (示例)</h3>
+                        <p class="text-sm text-[#86868B] mt-2">正在等待首期自动化周刊生成...</p>
                     </div>
                 </article>
                 </div>
-            <div class="mt-20 text-center">
-                <p class="text-xs text-[#86868B] uppercase tracking-widest">© 2025 Powered by n8n & AI Agent</p>
-            </div>
         </section>
     </main>
 </body>
