--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
-<!DOCTYPE html>
+
+                <a href="archive/2025-12-24.html" class="block group">
+                    <article class="glass-card rounded-2xl p-6 md:p-8 flex items-center justify-between">
+                        <div>
+                            <div class="text-xs font-semibold text-accent uppercase tracking-wider mb-2">
+                                2025 · 12-24
+                            </div>
+                            <h3 class="text-xl font-bold group-hover:text-black transition-colors">
+                                具身智能技术前沿周刊
+                            </h3>
+                            <p class="text-sm text-[#86868B] mt-2 line-clamp-1">
+                                本期深度解析了 2 个具身智能核心技术视频。
+                            </p>
+                        </div>
+                        <div class="ml-4 text-[#86868B] group-hover:text-accent transition-colors">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </div>
+                    </article>
+                </a><!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
